2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Updated the ignore list.

2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* gnome-doc-utils.make:
	* Makefile.am:
	* packaging/windows.sh:
	* src/main-window.c:
	* help/: Added documentation for Windows and Linux.
	* data/mcus.ui: Added Help menu entry, and a missing label.
	* data/ocr-assembly.lang: Fixed highlighting of comments.
	* src/analogue-input.c: Ensure the analogue input voltage is clamped
	to 0--5V.
	* src/instructions.h: Fix some comments.

2008-11-06  Philip Withnall  <philip@tecnocode.co.uk>

	* packaging/windows.sh: Fixed a problem where the script didn't change
	back to the correct directory after building for Windows.

2008-11-03  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/icons/:
	* data/Makefile.am: Added icon and sources, based off the GNOME CPU
	Frequency Scaling Monitor applet icon.
	* src/mcus_win_icon.rc:
	* src/mcus_win_icon_16x16.ico:
	* src/mcus_win_icon_32x32.ico:
	* src/mcus_win_icon_48x48.ico:
	* src/mcus_win_icon_64x64.ico
	* src/Makefile.am: Added Windows icons and code to package them into
	the built binary.

2008-11-02  Philip Withnall  <philip@tecnocode.co.uk>

	* packaging/: Added Windows packaging infrastructure and NSIS script.

2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.desktop.in:
	* data/Makefile.am: Add a desktop file.

2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c: Keep the old GtkSourceView search paths when
	adding our own to ensure source code highlighting always works
	as expected.

2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* src/widgets/led.c:
	* src/widgets/seven-segment-display.c: Change the LED and SSD colours
	so there's better contrast between the on and off states.

============ Version 0.1.1

2008-10-20  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac: Bump to version 0.1.1.
