@@ -471,7 +471,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_7"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_7"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -480,7 +480,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_6"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_6"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -489,7 +489,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_5"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_5"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -498,7 +498,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_4"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_4"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -507,7 +507,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_3"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_3"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -516,7 +516,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_2"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_2"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -525,7 +525,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_1"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_1"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -534,7 +534,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSLED" id="mw_output_led_0"/>
+															<object class="MCUSLED" type-func="mcus_led_get_type" id="mw_output_led_0"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -591,7 +591,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_single_ssd"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_single_ssd"/>
 														</child>
 													</object>
 												</child>
@@ -603,10 +603,10 @@
 												<child>
 													<object class="GtkHBox" id="hbox3">
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_dual_ssd1"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_dual_ssd1"/>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_dual_ssd0"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_dual_ssd0"/>
 														</child>
 													</object>
 												</child>
@@ -620,7 +620,7 @@
 														<property name="n-rows">2</property>
 														<property name="n-columns">8</property>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd15"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd15"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -629,7 +629,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd14"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd14"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -638,7 +638,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd13"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd13"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -647,7 +647,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd12"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd12"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -656,7 +656,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd11"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd11"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -665,7 +665,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd10"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd10"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -674,7 +674,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd9"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd9"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -683,7 +683,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd8"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd8"/>
 															<packing>
 																<property name="top-attach">0</property>
 																<property name="bottom-attach">1</property>
@@ -692,7 +692,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd7"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd7"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
@@ -701,7 +701,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd6"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd6"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
@@ -710,7 +710,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd5"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd5"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
@@ -719,7 +719,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd4"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd4"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
@@ -728,7 +728,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd3"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd3"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
@@ -737,7 +737,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd2"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd2"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
@@ -746,7 +746,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd1"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd1"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
@@ -755,7 +755,7 @@
 															</packing>
 														</child>
 														<child>
-															<object class="MCUSSevenSegmentDisplay" id="mw_output_multi_ssd0"/>
+															<object class="MCUSSevenSegmentDisplay" type-func="mcus_seven_segment_display_get_type" id="mw_output_multi_ssd0"/>
 															<packing>
 																<property name="top-attach">1</property>
 																<property name="bottom-attach">2</property>
